This is a summary of the changes in KTIGCC since the first alpha release:

KTIGCC 1.02 (2006-09-05):

* Fixed inverted logic bug causing the Debug menu and toolbar buttons to get
  hidden during File/New/Project.
* Fixed the Project Options dialog not reacting correctly to changing the target
  from a regular program to another target or the other way round.
* Fixed detection of "??=" in source file splitting.
* Fixed bug in source file splitting causing the float in x>=0. to get split.


KTIGCC 1.01 (2006-08-21):

* Find and Replace dialogs now remember history (but only for the current KTIGCC
  session).


KTIGCC 1.00 (2006-08-20):

* Added NEWS file containing the history information previously published in the
  changelog snippets on SourceForge.
* Fixed moving files across file systems after compilation not working.
* The RPM now associates .tpr files with KTIGCC in KDE and GNOME.


KTIGCC 20060814 beta:

Improvements:
* Kate's automatic indentation (ENTER indents the new line
  the same as the old one) is now enabled.
* The syntax highlighting descriptions are now
  automatically regenerated if they are missing or out of
  date.
* Tab now reliably inserts a tab. Use Ctrl+I to indent the
  selection (or the current line). (The other Kate defaults
  were also changed to match TIGCC IDE more closely.)
* Implemented coding template popups.
* Implemented "Find symbol declaration".
* Implemented Ctrl+Tab to switch between source files. As
  Ctrl+Tab is taken up by the default KDE shortcut
  settings, Ctrl+G can also be used.
* Implemented completion on Ctrl+Space. As Ctrl+Space
  conflicts with X input methods, Ctrl+M can also be used.
* Implemented prototype tooltips on opening a parenthesis.
* Because of conflicts (Ctrl+F9 is reserved by KDE for
  virtual desktop switching, Ctrl+Alt+F9 and
  Shift+Ctrl+Alt+F9 by X.Org X11 for virtual console
  switching), F8 can now be used instead of Ctrl+F9. So F8
  is Make and Alt+F8 is Compile. The Ctrl+F9 and