@@ -1,5 +1,11 @@
 This is a summary of the changes in KTIGCC since the first alpha release:
 
+KTIGCC 1.03 (2006-09-17):
+
+* Don't show symbol info for reserved keywords even in the case of an exact
+  match (fixes unhelpful prototype help for "asm").
+
+
 KTIGCC 1.02 (2006-09-05):
 
 * Fixed inverted logic bug causing the Debug menu and toolbar buttons to get
